# tenseg

./: .gitignore  CMakeLists.txt  Makefile  README.md  char_dict.h  char_eval.h  char_segger.cc  char_train.script  configure  dictionary.h  feature.h  optimizer.h  searcher.h  tenseg.h  test.cc  weight.h  word_based.cc
scripts/: overlap.py  shuffle.py  tag_mapping.py  wash_news_html.py
src/: char_eval.h  segtag.cc  tenseg.h  weight.h
src/char_segger/: char_test.script
src/common/: common.h  dictionary.h  feature.h  optimizer.h  weight.h
src/lattice/: feature.h  lattice.h  ngram_feature.h  segtag_model.h
src/segger/: word_based.cc
src/segtag/: feature.h  segtag.cc
src/tagger/: tagger.cc
